# hypervisor

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README.pl.md  SUMD.md  SUMR.md  TODO.md  URI2FLOW_DROPIN_README.md  app.doql.less  docker-compose.yml  goal.yaml  manifest.yaml  nlp2uri.yaml  planfile.yaml  prefact.yaml  pyproject.toml  tree.txt
.github/workflows/: ci.yml
.registry/: capability_index.json  operation_index.json  uri_index.json
agents/: README.md
agents/custom/: README.md
agents/operators/: desktop_operator.yaml
config/: cli_shortcuts.uri.yaml  deployments.uri.yaml  docker.uri.yaml  flow_defaults.uri.yaml  llm.uri.yaml  operator_policy.uri.yaml  operator_registry.uri.yaml  runtime.uri.yaml  ssh.uri.yaml  touri.uri.yaml  uri3.uri.yaml
contracts/: registry.yaml  resources.yaml  standards.yaml  views.yaml
contracts/agents/: codex_nl_plan_agent.yaml  codex_nl_smoke_agent.yaml  codex_uri_smoke_agent.yaml  gnome_programmer_agent.yaml  hypervisor_dashboard_agent.yaml  remote_deploy_agent.yaml  schema_collab_agent.yaml  screenshot_analysis_agent.yaml  user_agent.yaml  weather_map_agent.yaml
contracts/compatibility/: policy.yaml
contracts/proto/: codex_uri_smoke.proto  dashboard.proto  deploy.proto  desktop.proto  operator.proto  screenshots.proto  user.proto
deployments/: agent_deployments.yaml
docs/: AGENTS_AND_MONITORING.md  AGENTS_AND_MONITORING.pl.md  ANTI_TELLM.md  ARCHITECTURE.md  ARCHITECTURE_META_FACTORY.md  ARCHITECTURE_RUNTIME_AND_TESTING.md  ARCHITECTURE_V0_5.md  ARTIFACT_STANDARD.md  AUTONOMY_LOOP.md  AUTO_EVOLUTION_PIPELINE.md  CAPABILITY_VERIFICATION.md  CHAT_AND_WORKFLOWS.md  CLI_MAP.md  CLI_REFERENCE.md  COMPATIBILITY_GOVERNANCE.md  CONFIG_URI_YAML.md  CONTRACTS.md  CONTRACT_REGISTRY.md  CONTRACT_REGISTRY_SCHEMA.md  DASHBOARD.md  DEPLOYMENT.md  DESKTOP_AUTONOMY.md  DOMAIN_SEPARATION.md  DONE.md  EVOLUTION.md  EXAMPLES_TESTING.md  FLOW_FORMAT.md  GENERATOR.md  GETTING_STARTED.md  HYPERVISOR_V0_2.md  HYPERVISOR_V0_3.md  HYPERVISOR_V0_4.md  HYPERVISOR_WORKFLOW.md  MARKPACT_WITH_TOURI.md  MENTAL_MODEL.md  META_AGENT.md  NL2A_DOMAIN_PACKS.md  NL2URI.md  OPERATOR_RUNTIME.md  OPERATOR_SECURITY.md  (+23 more)
domains/desktop_ops/: README.md  domain.yaml  operator_registry.yaml  scenario_registry.yaml
domains/hypervisor_dashboard/: domain.yaml  uri_tree.yaml
domains/office/: README.md  scenario_registry.yaml
domains/physical_ops/: README.md  domain.yaml  operator_registry.yaml  scenario_registry.yaml
domains/weather_map/: commands.yaml  domain.yaml  planner.py  registry.fragment.yaml  renderers.yaml  resources.yaml  uri_tree.yaml  views.yaml
evolution/proposals/: add_invoices_agent.yaml  add_orders_agent.yaml
examples/: README.md  README.pl.md  broken_agent.yaml  create_invoices_agent_prompt.txt  create_orders_agent.yaml
examples/01_quickstart_local/: README.md  run.sh
examples/02_uri3_scan_http/: README.md
examples/03_ssh_remote_agent/: README.md  docker-compose.yml
examples/04_nl2a_weather_map/: README.md  run.sh
examples/05_meta_repair/: README.md
examples/06_orders_agent/: README.md
examples/07_invoices_agent/: README.md
examples/08_evolution/: README.md
examples/09_run_agent_hypervisor/: README.md  run.sh
examples/11_playwright_browser/: run.sh
examples/13_nl2uri_multi_uri_graph/: README.md  run.sh  task_plan.yaml
examples/14_workflow_executor_mock/: run.sh
examples/15_compact_uri_flow/: README.md  branching.uri.flow.yaml  run.sh  weather.uri.flow.yaml
examples/16_llm_graph_planner/: run.sh
examples/16_www_landing_monitor/: README.md  task_graph.yaml
examples/17_flow_vs_graph/: README.md  expanded.expected.uri.graph.yaml  run.sh  weather.uri.flow.yaml
generator/: agent_generator.py  hashutil.py  model.py  validate.py  verify.py
hypervisor/: cli.py
market/: ASSESSMENT.md  DEMO_10MIN.md  GTM_POLAND.md  LANDING_COPY.md  OFFERS.md  PAIN_LANGUAGE.md  README.md  SALES_MESSAGES.md  STRATEGY.md
meta_agent/: orchestrator.py  planner.py  repair.py
nl2a/: cli.py
nl2uri/: cli.py  domain_planner.py  llm_planner.py  pipeline.py
output/: contract_registry.resolved.json
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
schemas/: agent_contract.schema.json  agent_readiness.schema.json  apply_plan.schema.json  apply_result.schema.json  artifact_base.schema.json  cli_shortcuts.schema.json  command_contract.schema.json  contract_registry.schema.json  deployment_registry.schema.json  domain_pack.schema.json  evolution_proposal.schema.json  incident.schema.json  log_event.schema.json  renderer_contract.schema.json  repair_plan.schema.json  resources.schema.json  runtime_state.schema.json  ticket.schema.json  uri_shell_context.schema.json  uri_tree.schema.json  views.schema.json  workflow_artifact.schema.json
scripts/: fix-generated-ownership.sh  test-all-examples.sh
testenv/: docker-compose.ssh.yml
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_capability_tests.py  test_contract_registry.py  test_cross_validation_v03.py  test_evolution_proposal.py  test_generate.py  test_hypervisor.py  test_meta_agent.py  test_nl2a_v04.py  test_nl2uri.py  test_policy_gate.py  test_registry_builder_v03.py  test_runtime_client.py  test_schema_validation_v03.py  test_uri2llm_v04.py  test_uri2ops_android.py  test_uri2ops_browser.py  test_uri2ops_pcwin.py  test_uri2ops_serve.py  test_uri2ops_v01.py  test_uri3.py  test_uri_tree_validator.py  test_validate.py
uri3/: cli.py
www/: .dockerignore  Dockerfile  README.md  app.js  chat-flow-view.js  chat-uri.js  chat.html  demo.html  docker-compose.yml  flow-chat.css  flow-chat.html  flow-chat.js  index.html  index.legacy.html  landing-i18n.js  landing.css  landing.js  przyklady.html  site-shell.css  styles.css
(+259 files in other folders)
