[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-system"
version = "0.5.7"
description = "WronAI resource agent monorepo — uri3, nl2uri, hypervisor, agent factory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Tom Sapletta", email = "tom@sapletta.com" }]

dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "rich>=13.0.0",
]

[project.scripts]
hypervisor = "hypervisor.cli:main"
uri3 = "uri3.cli:main"
nl2uri = "nl2uri.cli:main"
nl2a = "nl2a.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/hypervisor"
Repository = "https://github.com/wronai/hypervisor"
Issues = "https://github.com/wronai/hypervisor/issues"
Documentation = "https://github.com/wronai/hypervisor#readme"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
uri3 = { workspace = true }
nl2uri = { workspace = true }
resource-agent-hypervisor = { workspace = true }
resource-agent-factory = { workspace = true }

[tool.setuptools.packages.find]
where = [
    "packages/uri3",
    "packages/nl2uri",
    "packages/resource-agent-hypervisor",
    "packages/resource-agent-factory",
]
include = [
    "uri3*",
    "nl2uri*",
    "nl2a*",
    "hypervisor*",
    "meta_agent*",
    "runtime_client*",
    "generator*",
]

[tool.setuptools.package-data]
hypervisor = ["py.typed", "data/*.yaml"]
generator = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/uri3",
    "packages/nl2uri",
    "packages/resource-agent-hypervisor",
    "packages/resource-agent-factory",
    ".",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true

[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
