[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-agent-system"
version = "0.5.21"
description = "WronAI resource agent monorepo — uri3, nl2uri, uri2flow, uri2ops, touri, hypervisor, agent factory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Tom Sapletta", email = "tom@sapletta.com" }]

dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jsonschema>=4.23",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
    "rich>=13.0.0",
]
browser = [
    "playwright>=1.40",
]
windows = [
    "pywinauto>=0.6",
]
server = [
    "uvicorn>=0.27",
]

[project.scripts]
hypervisor = "hypervisor.cli:main"
uri3 = "uri3.cli:main"
uri2ops = "uri2ops.cli:main"
uri2flow = "uri2flow.cli:main"
uri2run = "uri2run.cli:main"
uri = "urish.cli:main"
urish = "urish.cli:main"
touri = "touri.cli:main"
uri2verify = "uri2verify.cli:main"
urigen = "urigen.cli:main"
nl2uri = "nl2uri.cli:main"
nl2a = "nl2a.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/hypervisor"
Repository = "https://github.com/wronai/hypervisor"
Issues = "https://github.com/wronai/hypervisor/issues"
Documentation = "https://github.com/wronai/hypervisor#readme"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
uri3 = { workspace = true }
nl2uri = { workspace = true }
resource-agent-hypervisor = { workspace = true }
resource-agent-factory = { workspace = true }
uri2flow = { workspace = true }
uri2ops = { workspace = true }
touri = { workspace = true }
uri2voice = { workspace = true }
uri2pact = { workspace = true }
uri2run = { workspace = true }
urish = { workspace = true }
uri2verify = { workspace = true }
urigen = { workspace = true }
hypervisor-dashboard-agent = { workspace = true }

[tool.setuptools.packages.find]
where = [
    "packages/uri3",
    "packages/nl2uri",
    "packages/uri2flow",
    "packages/uri2ops",
    "packages/touri",
    "packages/uri2voice",
    "packages/uri2pact",
    "packages/uri2run",
    "packages/uri2verify",
    "packages/urigen",
    "packages/urish",
    "packages/hypervisor-dashboard-agent",
    "packages/resource-agent-hypervisor",
    "packages/resource-agent-factory",
    "examples/21_touri_voice",
]
include = [
    "uri2ops*",
    "uri2flow*",
    "uri2pact*",
    "uri2run*",
    "uri2verify*",
    "uri2voice*",
    "urigen*",
    "urish*",
    "hypervisor_dashboard_agent*",
    "touri*",
    "touri_examples*",
    "touri_examples_voice*",
    "uri3*",
    "nl2uri*",
    "nl2a*",
    "hypervisor*",
    "meta_agent*",
    "runtime_client*",
    "generator*",
]

[tool.setuptools.package-data]
hypervisor = ["py.typed", "data/*.yaml"]
generator = ["templates/*"]
uri2ops = [
    "operation_registry/*.yaml",
    "schemas/*.json",
]
uri2flow = [
    "schemas/*.json",
]
touri = [
    "schemas/*.json",
]
urigen = [
    "schemas/*.json",
    "templates/*.j2",
]
hypervisor_dashboard_agent = ["templates/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
markers = [
    "examples: integration tests for examples/* demos",
    "docker: requires docker daemon",
    "slow: long-running tutorial or full-stack example",
]
pythonpath = [
    "packages/uri3",
    "packages/nl2uri",
    "packages/uri2flow",
    "packages/uri2ops",
    "packages/touri",
    "packages/uri2voice",
    "packages/uri2pact",
    "packages/uri2run",
    "packages/uri2verify",
    "packages/urigen",
    "packages/urish",
    "packages/hypervisor-dashboard-agent",
    "packages/resource-agent-hypervisor",
    "packages/resource-agent-factory",
    "examples/21_touri_voice",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true

[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
